Reduced width of staff-board details to allow text wrapping and corrected broken arrows function.

--- a/client/less/template/who.import.less
+++ b/client/less/template/who.import.less
@@ -139,13 +139,17 @@ nav.slider-nav {
 		    text-transform: uppercase;
 		    font-size: 14px;
 		    position: relative;
-		    top: -26px;
 		    position: relative;
+			top: -33px;
+			height: 99px;
+			max-width: 300px;
 		    h4{
 			    font-weight: 100;
+			    white-space: normal;
 			}
 			h5{
 			    font-weight: normal;
+			    white-space: normal;
 			}
 			a{
 				color: @yellow;
